--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,17 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "install-and-dev": "pnpm install && pnpm dev",
-    "build": "vite build --mode development",
-    "build:watch": "vite build --watch --mode development",
-    "preview": "vite preview --port 8080",
-    "tsc": "tsc",
-    "tscgo": "tsgo",
-    "tsc-watch": "tsc --watch",
-    "dev:prod": "concurrently \"npm run build:watch\" \"npm run preview\""
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
@@ -43,6 +39,7 @@
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@remixicon/react": "4.6.0",
+    "@supabase/supabase-js": "^2.97.0",
     "@tailwindcss/vite": "^4.1.4",
     "@typescript/native-preview": "7.0.0-dev.20250522.2",
     "class-variance-authority": "^0.7.1",
@@ -58,6 +55,7 @@
     "react": "18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
+    "react-force-graph-2d": "^1.29.1",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.9",
@@ -68,13 +66,19 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "vaul": "^1.1.2",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "concurrently": "^9.1.2",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5.7.2",
     "vite": "^6.0.3",
